--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         my clients accounts balance and to communicate discrepancies with the
         clients.
     </p>  
-    <h3>Realton Hall Charity Work, Pennington - Bookkeeper</h3>
+    <h3>Realton Hall Charity Work, Pennington - Website creator / Bookkeeper</h3>
     <h4>June 2022 - Present</h4>
-    <p>Realton Hall recreation club is the local community hall where various activities such as Table tennis, Chess , Ballet and vairous other activites take place. I take care of the bookkeeping for the hall</p>
+    <p>Realton Hall recreation club is the local community hall where various activities such as Table tennis, Chess , Ballet and vairous other activites take place. I have created and maintain a website for the hall and I take care of the bookkeeping for the hall.</p>
+    <p>Site: <a href = "https://penningtonrecclub.co.za/">penningtonrecclub</a></p>
 </div>
 </div>
 
